# trivia-game-discord-activity

./: .env  README.md  docker-compose-dev.yaml  docker-compose.yaml  example.env
client/: Dockerfile  example.env  index.html  package-lock.json  package.json  template.env  vite.config.ts
client/src/: App.css  App.tsx  index.css
client/src/components/: Auth.tsx  CreateRoom.tsx  EndRoom.tsx  GameProvider.tsx  GameRanking.tsx  GameRoom.tsx  Home.tsx  HomeGame.tsx  JoinRoom.tsx  LobbyRoom.tsx  NavHomeGame.tsx  Ranking.tsx
genai/: Dockerfile  README.md  _gen_topic.py  entrypoint.sh  pyproject.toml  template.env
genai/config/: __init__.py  environment.py  subtopics.py  themes.py
genai/prometheus/: prometheus.yml
genai/server/: __init__.py  run.py
genai/server/controllers/: base.py  metrcis.py  questionnaire.py
genai/server/core/: __init__.py  _prompt_engine.py  lifespan.py  llm.py  schemas.py
genai/server/provider/: __init__.py  _client.py  _create_collection.py  _mongodb.py  base.py  constraints.py  schema.py  schemas.py  vecdb.py
genai/server/routes/: __init__.py  metrics.py  questionnaire.py
genai/server/schemas/: questionnaire.py
genai/tasks/: __init__.py  _client.py  _vectordb.py  tasks.py
lofi/: Dockerfile  playlist.txt
nginx/: colyseus.conf  nginx.conf  streaming.conf
nginx/sites-available/: game.conf
server/: .env.development  .env.template  Dockerfile  README.md  package-lock.json  package.json  template.env  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.config.ts  index.ts
server/test/: MyRoom_test.ts
(+56 files in other folders)
